Perkin-UAT/force-app/main/default/objects/INF_Case_Application__c/INF_Case_Application__c.object-meta.xml
<CustomObject>
    <label>Case Application</label>
    <nameField>
        <displayFormat>CA-{000000000}</displayFormat>
        <label>Case Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>