Perkin-UAT/force-app/main/default/objects/INF_Case_Application__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <referenceTo>INF_Application__c</referenceTo>
    <relationshipLabel>Case Applications</relationshipLabel>
    <relationshipName>Case_Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>