Perkin-UAT/force-app/main/default/objects/INF_Case_Application__c/fields/INF_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>INF_Application_Name__c</fullName>
    <formula>Application__r.Name</formula>
    <label>Application Name</label>
    <type>Text</type>
</CustomField>