Perkin-UAT/force-app/main/default/objects/INF_Case_Application__c/fields/INF_Application_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>INF_Application_Product_Group__c</fullName>
    <formula>TEXT( Application__r.INF_Product_Group__c )</formula>
    <label>Application Product Group</label>
    <type>Text</type>
</CustomField>