Perkin-UAT/force-app/main/default/objects/INF_Case_Application__c/fields/INF_Application_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>INF_Application_Product_Line__c</fullName>
    <formula>TEXT( Application__r.INF_Product_Line__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Product Line</label>
    <type>Text</type>
</CustomField>