Perkin-UAT/force-app/main/default/objects/INF_Case_Application__c/fields/INF_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>INF_Business_Line__c</fullName>
    <formula>TEXT(Application__r.INF_BL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Line</label>
    <type>Text</type>
</CustomField>