Perkin-UAT/force-app/main/default/objects/INF_Case_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>INF_Application_Product_Group__c</columns>
    <columns>INF_Application_Product_Line__c</columns>
    <columns>INF_Business_Line__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>